@@ -14,6 +14,8 @@ Feature Additions:
     consecutive &FOO lines refer to the same content (Issue 238).
  -- Add lpad(), cpad(), and rpad() functions to duplicate previous
     non-truncating ljust(), center(), and rjust functionality (Issue 13).
+ -- Add /delete switch to @function and allow removal of user-defined
+    functions (Issue 250).
 
 
 Bug Fixes:
@@ -27,6 +29,8 @@ Bug Fixes:
  -- @wall evaluated a speechmod before processing the message (Issue 16).
  -- @wall's switches did not interact properly (Issue 30).
  -- Corrected error messages for failed guest logins (Issue 246).
+ -- @function did not strip ansi from or properly truncate user-defined
+    function names. (Issue 249).
 
 
 Performance Enhancements:
